--- a/src/style/main.css
+++ b/src/style/main.css
@@ -5717,7 +5717,7 @@ body {
     width: 100% auto !important;
   }
 }
-.productCont .thumbs-product-slider .swiper-slide-thumb-active .productImg {
+.productCont .thumbs-product-slider .swiper-slide-thumb-active .thumpImg {
   border: 1px solid var(--main-hover);
 }
 .productCont .thumpImg {
@@ -5731,10 +5731,11 @@ body {
   justify-content: center;
   transition: all 0.3s ease-in-out;
   background-color: #f5f5f5;
+  border-radius: 10px;
+  border: 2px solid transparent;
 }
 .productCont .Thumbs-imgContainer {
   padding: 18px;
-  border: 2px solid transparent;
   border-radius: 10px;
   display: flex;
   align-items: center;
