--- a/src/style/main.css
+++ b/src/style/main.css
@@ -2051,19 +2051,26 @@ footer {
 }
 
 select {
-  background-color: var(--back-color);
-  border: 2px solid var(--back-color);
+  background-color: var(--white-color);
+  border: 1px solid #e6e8ec;
   height: 48px;
   width: 100%;
-  padding: 0 50px;
-  border-radius: 24px;
+  padding: 0 20px;
+  border-radius: 5px;
   text-align: start;
-  color: var(--text-color);
-  font-size: 14px;
+  color: var(--black-color);
+  font-size: 16px;
   font-weight: 400;
   margin-bottom: 0;
+  outline: none !important;
   transition: all 0.3s ease-in-out;
   caret-color: var(--main-color);
+  transition: all 0.3s ease-in-out;
+  caret-color: var(--main-color);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: "";
 }
 
 .form-input[type=email] {
@@ -2748,7 +2755,7 @@ html[dir=ltr] .return-link i {
 .select2-container--default .select2-selection--single {
   border: 1px solid transparent;
   border-radius: 4px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .select2-container--default .select2-selection--single:focus {
@@ -2927,9 +2934,6 @@ html[dir=ltr] .return-link i {
   }
   .full-grid {
     grid-column: 1/span 1;
-  }
-  .check-label {
-    margin-bottom: 15px;
   }
 }
 .account {
@@ -4718,6 +4722,12 @@ html[dir=ltr] .section-more i {
   background-color: var(--white-color);
   padding: 40px 32px;
 }
+@media only screen and (max-width: 991px) {
+  .checkout-pay,
+  .checkout-address {
+    padding: 40px 20px;
+  }
+}
 
 .add-address-cont {
   display: grid;
@@ -4760,6 +4770,14 @@ html[dir=ltr] .section-more i {
 }
 @media only screen and (min-width: 1440px) {
   .add-select-address {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .add-select-address {
+    font-size: 14px;
+  }
+  .add-select-address i {
     font-size: 18px;
   }
 }
@@ -5694,6 +5712,10 @@ body {
 }
 .store-cat .swiper-wrapper {
   padding: 5px;
+}
+
+.video-cont .swiper-pagination {
+  bottom: 0 !important;
 }
 
 .productCont-mainRow {
